Patient_State/main/default/objects/Patient_Motion__e/Patient_Motion__e.object-meta.xml
<CustomObject>
    <label>Patient Motion</label>
    <pluralLabel>Patient Motions</pluralLabel>
</CustomObject>