Patient_State/main/default/objects/Patient_Motion__e/fields/LastMotion__c.field-meta.xml
<CustomField>
    <fullName>LastMotion__c</fullName>
    <label>LastMotion</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>